// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHydrationLoadersApplied with mount points should apply correct hydration loaders when isLazy is false 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nice.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/more/Nested.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"//nice.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      Component,
      componentPath: \\"/nice.jsx\\",
      instance: \\"0\\",
      props: {},
    });
  </script><script type=\\"module\\">
    import Component from \\"//more/Nested.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      Component,
      componentPath: \\"/more/Nested.jsx\\",
      instance: \\"1\\",
      props: {},
    });
  </script><script type=\\"module\\">
    import Component from \\"//index.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      Component,
      componentPath: \\"/index.jsx\\",
      instance: \\"2\\",
      props: {},
    });
  </script>
		</body>
</html>"
`;

exports[`toHydrationLoadersApplied with mount points should apply correct hydration loaders when isLazy is true 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nice.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/more/Nested.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      componentImporter: async () => await import(\\"//nice.jsx\\"),
      componentPath: \\"/nice.jsx\\",
      instance: \\"0\\",
      props: {},
    });
  </script><script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      componentImporter: async () => await import(\\"//more/Nested.jsx\\"),
      componentPath: \\"/more/Nested.jsx\\",
      instance: \\"1\\",
      props: {},
    });
  </script><script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      componentImporter: async () => await import(\\"//index.jsx\\"),
      componentPath: \\"/index.jsx\\",
      instance: \\"2\\",
      props: {},
    });
  </script>
		</body>
</html>"
`;

exports[`toHydrationLoadersApplied with mount points should apply correct props based on componentToPropsMap 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-path=\\"/nav.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"0\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/nested/Heading.jsx\\" data-s-lazy=\\"false\\" data-s-instance=\\"1\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-path=\\"/index.jsx\\" data-s-lazy=\\"true\\" data-s-instance=\\"2\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>


<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      componentImporter: async () => await import(\\"//nav.jsx\\"),
      componentPath: \\"/nav.jsx\\",
      instance: \\"0\\",
      props: {firstProp:'nice',secondProp:42,thirdProp:false,helper() {
  return 'Testing non-JSON properties';
}},
    });
  </script><script type=\\"module\\">
    import Component from \\"//nested/Heading.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      Component,
      componentPath: \\"/nested/Heading.jsx\\",
      instance: \\"1\\",
      props: {text:{weight:'bold',content:'Welcome to the site'}},
    });
  </script><script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      componentImporter: async () => await import(\\"//index.jsx\\"),
      componentPath: \\"/index.jsx\\",
      instance: \\"2\\",
      props: {list:['Have a nice day world']},
    });
  </script>
		</body>
</html>"
`;
